--- a/EN3/EN3-GROUPE11.ipynb
+++ b/EN3/EN3-GROUPE11.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "973fc554",
    "metadata": {
     "ExecuteTime": {
@@ -60,7 +60,8 @@
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis as QDA\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
-    "from sklearn.metrics import precision_score, recall_score, confusion_matrix"
+    "from sklearn.metrics import precision_score, recall_score, confusion_matrix\n",
+    "import warnings"
    ]
   },
   {
@@ -1383,41 +1384,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "7026df05",
+   "execution_count": 36,
+   "id": "9b421499",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/gabriel/.local/lib/python3.9/site-packages/sklearn/base.py:432: UserWarning: X has feature names, but LinearDiscriminantAnalysis was fitted without feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (0,) (2,2) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [29]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m precision_lda \u001b[38;5;241m=\u001b[39m precision_score(y_test, y_pred_lda)\n\u001b[1;32m     21\u001b[0m recall_lda \u001b[38;5;241m=\u001b[39m recall_score(y_test, y_pred_lda)\n\u001b[0;32m---> 22\u001b[0m confusion_matrix_lda \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m confusion_matrix(y_test, y_pred_lda)\n\u001b[1;32m     24\u001b[0m precisions_lda\u001b[38;5;241m.\u001b[39mappend(precision_lda)\n\u001b[1;32m     25\u001b[0m recalls_lda\u001b[38;5;241m.\u001b[39mappend(recall_lda)\n",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (0,) (2,2) "
+      "LDA:  précision=0.898383554173028  rappel=0.9888095238095238\n",
+      "QDA:  précision=0.9318380099319572  rappel=0.9608730158730158\n"
      ]
     }
    ],
    "source": [
     "# StratifiedKFold avec k = 10.\n",
     "k_fold = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "warnings.simplefilter('ignore')\n",
     "\n",
     "precisions_lda = []\n",
     "recalls_lda = []\n",
-    "confusion_matrix_lda = []\n",
+    "confusion_matrix_lda = np.zeros((2,2))\n",
     "\n",
     "precisions_qda = []\n",
     "recalls_qda = []\n",
-    "confusion_matrix_qda = []\n",
+    "confusion_matrix_qda = np.zeros((2,2))\n",
     "\n",
     "for train_idx, test_idx in k_fold.split(X, y):\n",
     "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
@@ -1467,94 +1458,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ad439fdb",
+   "execution_count": 37,
+   "id": "8e32c459",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrice de confusion pour LDA Fold 1\n",
-      "[[19  3]\n",
-      " [ 0 35]]\n",
-      "Matrice de confusion pour QDA Fold 1\n",
-      "[[21  1]\n",
-      " [ 1 34]]\n",
-      "Matrice de confusion pour LDA Fold 2\n",
-      "[[20  2]\n",
-      " [ 1 34]]\n",
-      "Matrice de confusion pour QDA Fold 2\n",
-      "[[21  1]\n",
-      " [ 2 33]]\n",
-      "Matrice de confusion pour LDA Fold 3\n",
-      "[[18  3]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour QDA Fold 3\n",
-      "[[19  2]\n",
-      " [ 2 34]]\n",
-      "Matrice de confusion pour LDA Fold 4\n",
-      "[[12  9]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour QDA Fold 4\n",
-      "[[16  5]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour LDA Fold 5\n",
-      "[[17  4]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour QDA Fold 5\n",
-      "[[18  3]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour LDA Fold 6\n",
-      "[[15  6]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour QDA Fold 6\n",
-      "[[16  5]\n",
-      " [ 1 35]]\n",
-      "Matrice de confusion pour LDA Fold 7\n",
-      "[[17  4]\n",
-      " [ 2 34]]\n",
-      "Matrice de confusion pour QDA Fold 7\n",
-      "[[17  4]\n",
-      " [ 2 34]]\n",
-      "Matrice de confusion pour LDA Fold 8\n",
-      "[[19  2]\n",
-      " [ 1 35]]\n",
-      "Matrice de confusion pour QDA Fold 8\n",
-      "[[20  1]\n",
-      " [ 6 30]]\n",
-      "Matrice de confusion pour LDA Fold 9\n",
-      "[[17  4]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour QDA Fold 9\n",
-      "[[19  2]\n",
-      " [ 0 36]]\n",
-      "Matrice de confusion pour LDA Fold 10\n",
-      "[[17  4]\n",
-      " [ 0 35]]\n",
-      "Matrice de confusion pour QDA Fold 10\n",
-      "[[19  2]\n",
-      " [ 0 35]]\n"
+      "Matrice de confusion LDA = \n",
+      "[[171.  41.]\n",
+      " [  4. 353.]]\n",
+      "Matrice de confusion QDA = \n",
+      "[[186.  26.]\n",
+      " [ 14. 343.]]\n"
      ]
     }
    ],
    "source": [
-    "# Affichez les matrices de confusion pour LDA et QDA.\n",
-    "for i in range(10):\n",
-    "    print(\"Matrice de confusion pour LDA Fold\", i+1)\n",
-    "    print(confusion_matrices_lda[i])\n",
+    "print(f\"Matrice de confusion LDA = \\n{confusion_matrix_lda}\")\n",
     "\n",
-    "    print(\"Matrice de confusion pour QDA Fold\", i+1)\n",
-    "    print(confusion_matrices_qda[i])"
+    "print(f\"Matrice de confusion QDA = \\n{confusion_matrix_qda}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92c71e38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
